--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,21 @@ header {
     padding: 2px 0px 5px 0px;
 }
 
-video {
+iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.contenedor_video {
     width: 90%;
+    height: 0;
     margin: 20px 5% 20px 5%;
     border-radius: 30px;
+    padding-bottom: 44%;
+    position: relative;
 }
 
 header img{
